# ESP32-Desktop-Monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  README_PERSONAL.md  sdkconfig.defaults
src/: lib.rs  main.rs  wifi.rs
