[package]
name = "rust-clock"
version = "0.1.0"
authors = ["Axel chabrerie <114242486+Axel-ex@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "rust-clock"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
embedded-graphics = "0.8.0"
ssd1306 = "0.7.1"
sh1106 = " 0.5.0"
once_cell = "1.19.0"
dht-sensor = {git = "https://github.com/michaelbeaumont/dht-sensor.git", branch = "main" } 
anyhow = "1.0"
embedded-svc = "0.27.1"
heapless = "0.8.0"
time                    = { version = "0.3.9", features = ["std", "macros"]}
chrono = "0.4.38"

[build-dependencies]
embuild = "0.31.3"
